--- a/main.html
+++ b/main.html
@@ -11,6 +11,15 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<div class="holder">
+		<div id="b1" class="item">1</div>
+		<div id="b2" class="item">2</div>
+		<div id="b3" class="item">3</div>
+	</div>
+	
+	
+
+	
 </body>
 
 </html>
